# quantum_walk

./: Cargo.toml  Makefile  readme.md
scripts/: pre-commit
src/: lib.rs
src/foundation/: coin.rs  mod.rs  number.rs  quantumstate.rs  seed.rs
src/line/: mod.rs  plotter.rs  walk.rs
src/line/afst/: mod.rs  two_phase.rs  walk.rs
src/line/dqw/: mod.rs
src/line/periodic/: walk.rs
src/line/stripe/: eigenvalue.rs  walk.rs
src/line/three_state/: eigenvalue.rs  mod.rs  walk.rs
src/line/tqwo/: mod.rs  model1.rs  model2.rs  model3.rs  model4.rs  model5.rs  numeric.rs  transfer_matrix.rs  walk.rs
src/plot/: plotter.rs
src/test/: line.rs  mod.rs  tools.rs
