[package]
name = "quantum_walk"
version = "0.1.0"
authors = ["CKiumi <c.kiumi.oval17@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.32.3"
plotters = "0.3.0"

[dev-dependencies]
rand = "0.8.3"
# to use rand for wasm, features = ["wasm-bindgen"] must be added
# rand = { version = "0.6.1", features = ["wasm-bindgen"] }



